# gakuryoku-saiten

./: .gitignore  LICENSE  README.md  gakuryoku-saiten.cabal  stack.yaml
app/: Main.hs
documents/: answers.csv  sample-result.csv  sample-score.csv  sample.csv
