name:                gakuryoku-saiten
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/23prime/gakuryoku-saiten
license:             BSD3
license-file:        LICENSE
author:              23prime
maintainer:          
copyright:           2017 23prime
category:            Haskell
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      
  exposed-modules:     
  build-depends:       base >= 4.7 && < 5
                     , time
                     , text
  default-language:    Haskell2010

executable gakuryoku-saiten-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gakuryoku-saiten
                     , time
                     , text
  default-language:    Haskell2010

test-suite gakuryoku-saiten-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      
  main-is:             Spec.hs
  build-depends:       base
                     , gakuryoku-saiten
                     , time
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/23prime/gakuryoku-saiten
